2007-09-06  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* Makefile.am (ICEDTEA_PATCHES): Add icedtea-certbundle.patch.
	* Makefile.in: Regenerate.
	* patches/icedtea-certbundle.patch: New file.

2007-09-05  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* configure.ac: Comment explicit gawk check.
	* configure: Regenerate.

2007-09-05  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gcjwebplugin.cc (PLUGIN_MIME_DESC): Update for 1.5, 1.6 and 1.7.

2007-09-05  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* configure.ac: Bump version to 1.4.
	* configure: Regenerate.

2007-09-05  Lillian Angel <langel@redhat.com>

	* AUTHORS: Added Joshua Sumali.

2007-09-05  Joshua Sumali  <jsumali@redhat.com>

	* patches/icedtea-copy-plugs.patch: Fixed hunks to apply cleanly
	with b19.
	* patches/icedtea-debuginfo.patch: Likewise.
	* patches/icedtea-version.patch: Likewise.

2007-09-05  Lillian Angel  <langel@redhat.com>

	* INSTALL: Added note about stamped targets.
	* Makefile.am: Added new targets. (i.e. instead of calling
	make stamps/plugs.stamps, 'make plugs' works.)
	* Makefile.in: Regenerated.

2007-09-05  Lillian Angel  <langel@redhat.com>

	* .hgignore: Updated.
	* INSTALL: Updated.
	* Makefile.am: Fixed to create stamps in a stamps directory.
	* Makefile.in: Regenerated.

2007-09-04  Lillian Angel  <langel@redhat.com>

	* .hgignore: Updated to ignore tools/
	* Makefile.am: Updated to b19. A version of tools.jar is now 
	generated at the beginning of the build. It is now required to 
	build other hotspot sources. rt.jar has been renamed to rt-closed.jar, 
	and ALT_CLOSED_JDK_IMPORT_PATH has been replaced with
	ALT_BINARY_PLUGS_PATH, as per b19 changes.
	* Makefile.in: Regenerated.
	* patches/icedtea-tools.patch: New patch to fix the build. jvmti.h
	fails generate properly without this patch.
	* tools-copy-files.txt: List of files used to create tools.jar.
	* generated/sun/awt/DebugHelper.java: Removed. This file has been
	removed from the OpenJDK sources as well.
