@@ -34,6 +34,7 @@ FIND_XERCES2_JAR
 FIND_FREETYPE
 WITH_OPENJDK_SRC_ZIP
 WITH_OPENJDK_SRC_DIR
+WITH_ICEDTEA
 ENABLE_FAST_BUILD
 
 CHECK_HEADERS
