@@ -1,3 +1,9 @@
+2007-09-07  Lillian Angel  <langel@redhat.com>
+
+	* acinclude.m4: Added --with-icedtea option.
+	* configure: Regenerated.
+	* configure.ac: Added WITH_ICEDTEA.
+
 2007-09-06  Thomas Fitzsimmons  <fitzsim@redhat.com>
 
 	* Makefile.am (ICEDTEA_PATCHES): Add icedtea-certbundle.patch.
